src/objects/Medical_Profile_Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Boolean_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean_Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Question_Text__c</fullName>
        <label>Full Question Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Profile_Header__c</fullName>
        <label>Medical Profile Header</label>
        <referenceTo>Medical_Profile_Header__c</referenceTo>
        <relationshipLabel>Medical Profile Questions</relationshipLabel>
        <relationshipName>Medical_Profile_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Order_Patient_EXT_ID__c</fullName>
        <externalId>true</externalId>
        <label>Survey Order Patient EXT ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Medical Profile Question</label>
    <nameField>
        <label>Survey Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Profile Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>